--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
         <div class="project">
           <h3>Hausman Barbershop Website</h3>
           <p>Developed the front-end for Hausman Barbershop using HTML, CSS, and JavaScript. Currently working on the back-end to implement features like appointment booking.</p>
-          <a href="https://diti41.github.io/HAUSMAN-BARBER-SHOP/" target="_blank">View on GitHub</a>
+          <a href="https://diti41.github.io/HAUSMAN-BARBER-SHOP/index/" target="_blank">View on GitHub</a>
         </div>
       
         <div class="project">
