--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         <div class="project">
           <h3>E-commerce Site (In Progress)</h3>
           <p>Working on an e-commerce platform that includes a responsive design, product catalog, and payment gateway integration.</p>
-          <a href="https://github.com/YourUsername/ecommerce-site" target="_blank">View on GitHub</a>
+          <a href="https://diti41.github.io/aptiantech-ecom/" target="_blank">View on GitHub</a>
         </div>
       
         <!--<div class="project">
